ts-type-checker/tests/hidden_cases/test_files/moduleAssignmentCompat4.ts
// @target: es2015
type ezeCL2vbuAZS = number;
namespace A {
   export namespace M {
        class C { }
    }
}
namespace B {
    export namespace M {
        export class D { }
    }
}

var a: A;
var b: B;

a = b;
b = a; // error